# ValtheraDB-conduit

./: .gitignore  README.md  package.json
.github/workflows/: build.yml  python-bridge.yml
python/: .gitignore  README.md  pyproject.toml
python/test/: smoke.py
python/valtheradb_conduit/: __init__.py  client.py  install.py
python/wxn0brp/db/conduit/: __init__.py  protocol.py
src/: index.ts  versions.ts
src/daemon/: dispatch.ts  errors.ts  registry.ts
src/protocol/: framing.ts  types.ts
test/: framing.test.ts  registry.test.ts
